//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris";
option java_outer_classname = "ValuesProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/net/url.proto";
import "spine/people/person_name.proto";

// Value that generated from decimal ISBN.
//
message Isbn62 {

    // We generated book ID that contains ISBN code with the base62 algorithm.
    //
    // ISBN is a unique code that every book publisher has to determinate itself.
    //
    // This code usually has ten or thirteen symbols.
    //
    // To increase readability we convert that code from decimal format to code with base62.
    //
    // Example:
    // Original ISBN:    9780134685991,
    // Generated ISBN62: 2mBSCRqZ.
    //
    string value = 1;
}

// All information about the book.
//
message BookDetails {

    spine.net.Url cover_url = 1;
    BookTitle title = 2;
    repeated AuthorName authors = 3;
    BookDescription description = 4;
    repeated Category categories = 5;
}

// Book title.
//
message BookTitle {

    // Book title.
    string value = 1;
}

// Full authorâ€™s name.
//
message AuthorName {

    // Author name can be complicated and different if the authors are from different countries.
    repeated spine.people.PersonName value = 1;
}

// Full book description.
//
message BookDescription {

    // Book description.
    string value = 1;
}

// The name of the category.
//
message Category {

    // Category name;
    string value = 1;
}

// A radio-frequency identification mark for the book.
//
message Rfid {

    // RFID.
    string value = 1;
}

// Year of publication of the book.
message Year {

    // Year.
    string value = 1;
}

// Reasons to write the book off.
//
message WriteOffReason {

    // Reasons why a librarian can write the book off.
    oneof write_off_reason {
        bool lost = 1;
        bool outdated = 2;
        string custom_reason = 3;
    }
}
